# Pytesseract-streamlit-interface

./: .gitignore  LICENSE  README.md  __init__.py  config.py  image_processing.py  main.py  pyproject.toml  requirements.txt  run.py  streamlit_app.py  ui.py
pytesseract_streamlit/: __main__.py  config.py  image_processing.py  ui.py
